# exo_cpp

./: .gitignore  README.md
cartesian_vector_param/: REVIEW_35.txt  vector.cpp  vector.hh
cartesian_vector_variable/: REVIEW_33.txt  vector.cpp  vector.hh
example/: CMakeCache.txt  Makefile  cmake_install.cmake  main
find_motive/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp  review_34.txt  sources.cpp  sources.h
is_prime/: main  sources.cpp
is_prime_prog/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  review_34.txt  sources.cpp  sources.h
selection_sort/: my_sort.hpp
selection_sort_file/: CMakeLists.txt  my_sort.hpp  sort_file.hpp
selection_sort_file_meta/: CMakeLists.txt  my_sort.hpp  sort_file.hpp  v_i copy.txt
set_functions/: set_operations.hpp
